🐞 fix: Problem with spacing

--- a/src/components/HomePage/latestNews/bandcampSection/bandcampSection.module.css
+++ b/src/components/HomePage/latestNews/bandcampSection/bandcampSection.module.css
@@ -2,7 +2,6 @@
     width: 500px;
 }
 .containerIframe {
-    width: 50%;
     display: flex;
     justify-content: flex-end;
     align-items: center;
